New-Upload-1755854042013/objects/User_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Name__c</fullName>
        <label>Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Set Name</label>
        <referenceTo>Permission_Set_Admin__c</referenceTo>
        <relationshipLabel>User Permissions</relationshipLabel>
        <relationshipName>User_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>User Permissions</relationshipLabel>
        <relationshipName>User_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Permission</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>User Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>